[package]
name = "ff3_1"
version = "0.1.0"
edition = "2021"
description = "FF3-1 Format-Preserving Encryption (NIST SP 800-38G Rev 1)"

[dependencies]
aes = "0.8"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
# No extra dev deps needed; tests are inline

[[bin]]
name = "ff3_demo"
path = "src/main.rs"
