[package]
name = "ff3_1"
version = "0.2.0"
edition = "2021"
description = "FF3-1 Format-Preserving Encryption (NIST SP 800-38G Rev 1) — u128 arithmetic"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
aes = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[[bin]]
name = "ff3_demo"
path = "src/main.rs"
